#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Dino], 0.99, [vmakarov@gcc.gnu.org])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([cocom.sgml.in])
AM_MAINTAINER_MODE

# Checks for programs.
# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.

AC_CONFIG_SUBDIRS([AMMUNITION SPRUT SHILKA MSTA OKA NONA ONIGURUMA DINO])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
